services/users/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: users
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
